--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/joy": "^5.0.0-beta.7",
+    "@mui/material": "^5.14.10",
     "@mui/styles": "^5.14.10",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
@@ -23,6 +27,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "sonner": "^0.7.2",
