--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.7",
     "@mui/material": "^5.14.10",
     "@mui/styles": "^5.14.10",
+    "@types/cookie": "^0.5.2",
     "@types/js-cookie": "^3.0.4",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
