--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.10",
     "@mui/styles": "^5.14.10",
     "@types/js-cookie": "^3.0.4",
+    "@types/lodash": "^4.14.199",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -28,6 +29,7 @@
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
