--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/joy": "^5.0.0-beta.7",
     "@mui/material": "^5.14.10",
     "@mui/styles": "^5.14.10",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@types/cookie": "^0.5.2",
     "@types/js-cookie": "^3.0.4",
     "@types/lodash": "^4.14.199",
